Add Pocket Api + Not WebView to popup for PocketAuth

--- a/GithubX.UWP/GithubX.UWP/Views/RepoPage.xaml
+++ b/GithubX.UWP/GithubX.UWP/Views/RepoPage.xaml
@@ -44,7 +44,7 @@
                         </Flyout>
                     </Button.Flyout>
                 </Button>
-                <!--<Button Tag="3" Content="💾 Save in Pocket"/>-->
+                <Button Style="{StaticResource ButtonBar}" Tag="3" Click="ButtonBar_Click" Content="💾 Pocket"/>
             </StackPanel>
             <controls:DropShadowPanel 
                 VerticalContentAlignment="Stretch"
