--- a/GithubX.UWP/GithubX.UWP/Views/StarListPage.xaml
+++ b/GithubX.UWP/GithubX.UWP/Views/StarListPage.xaml
@@ -8,7 +8,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:media="using:Windows.UI.Xaml.Media"
-    NavigationCacheMode="Enabled"  xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
+    NavigationCacheMode="Enabled"  
+    xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
     mc:Ignorable="d">
     <Page.Resources>
         <Style TargetType="MenuFlyoutPresenter">
