--- a/GithubX.UWP/GithubX.UWP/Views/RepoPage.xaml
+++ b/GithubX.UWP/GithubX.UWP/Views/RepoPage.xaml
@@ -2,12 +2,10 @@
     x:Class="GithubX.UWP.Views.RepoPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GithubX.UWP.Views"
     xmlns:m="using:GithubX.UWP.Models"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    xmlns:media="using:Windows.UI.Xaml.Media"
     xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
     mc:Ignorable="d">
     <Page.Resources>
@@ -64,14 +62,18 @@
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <Button Click="CopyGitLink_BtnClick" Content="Copy" FontFamily="Segoe UI Symbol" Foreground="Black" Background="White" />
-                    <TextBox Grid.Column="1" HorizontalAlignment="Stretch" Text="{x:Bind repo.clone_url}" IsReadOnly="True"/>
                     <ListView Grid.Row="1" Grid.ColumnSpan="2" 
                               ScrollViewer.VerticalScrollMode="Enabled" 
                               IsItemClickEnabled="True"
                               ItemClick="FilesList_ItemClick"
                               x:Name="FilesList"
                               ItemsSource="{x:Bind ContentFiles,Mode=OneWay}">
+                        <ListView.Header>
+                            <Grid>
+                                <Button Click="CopyGitLink_BtnClick" Content="Copy" FontFamily="Segoe UI Symbol" Foreground="Black" Background="White" />
+                                <TextBox Margin="74 0 2 0" Grid.Column="1" HorizontalAlignment="Stretch" Text="{x:Bind repo.clone_url}" IsReadOnly="True"/>
+                            </Grid>
+                        </ListView.Header>
                         <ListView.ItemTemplate>
                             <DataTemplate x:DataType="m:ContentModel">
                                 <StackPanel Orientation="Horizontal">
