--- a/source/GithubX.UWP/Views/LoginPage.xaml
+++ b/source/GithubX.UWP/Views/LoginPage.xaml
@@ -6,7 +6,6 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    xmlns:lottieUwp="using:LottieUWP"
     mc:Ignorable="d">
     <Page.Resources>
         <Style TargetType="TextBlock">
@@ -35,13 +34,10 @@
                 <SolidColorBrush Color="Black" Opacity="0.7"/>
             </controls:Loading.Background>
             <StackPanel>
-                <lottieUwp:LottieAnimationView 
-                    FileName="Assets/Files/loading.json"
-                    RepeatCount="-1"
-                    AutoPlay="{x:Bind LoadingControl.IsLoading,Mode=OneWay}"
+				<ProgressRing IsEnabled="{x:Bind LoadingControl.IsLoading,Mode=OneWay}"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Center"/>
-                <TextBlock Foreground="White" Text="Gadering Data ..."/>
+				<TextBlock Foreground="White" Text="Gadering Data ..."/>
             </StackPanel>
         </controls:Loading>
     </Grid>
