--- a/source/GithubX.UWP/App.xaml
+++ b/source/GithubX.UWP/App.xaml
@@ -1,4 +1,5 @@
-﻿<Application
+﻿
+	<Application
     x:Class="GithubX.UWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,20 +7,23 @@
     xmlns:media="using:Windows.UI.Xaml.Media"
     RequestedTheme="Light">
 	<Application.Resources>
-		<XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls"/>
-		<Color x:Key="AcrylicBrushTintColor1">#eee</Color>
-        <Color x:Key="AcrylicBrushFallbackColor1">#eee</Color>
-        <media:AcrylicBrush x:Key="HeaderAcrylic" 
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<XamlControlsResources  xmlns="using:Microsoft.UI.Xaml.Controls"/>
+			</ResourceDictionary.MergedDictionaries>
+			<Color x:Key="AcrylicBrushTintColor1">#eee</Color>
+			<Color x:Key="AcrylicBrushFallbackColor1">#eee</Color>
+			<media:AcrylicBrush x:Key="HeaderAcrylic" 
                                         BackgroundSource="HostBackdrop" 
                                         TintOpacity="0.8" 
                                         TintColor="#66ffffff" 
                                         FallbackColor="#eee"/>
 
-        <media:AcrylicBrush x:Key="DialogBoxAcrylicBrush" 
+			<media:AcrylicBrush x:Key="DialogBoxAcrylicBrush" 
                             BackgroundSource="Backdrop" 
                             TintOpacity="0.1" 
                             TintColor="#19FFFFFF" 
                             FallbackColor="#FFF" />
-    </Application.Resources>
-    
+		</ResourceDictionary>
+	</Application.Resources>
 </Application>
