--- a/source/GithubX.UWP/App.xaml
+++ b/source/GithubX.UWP/App.xaml
@@ -1,15 +1,16 @@
-﻿
-	<Application
+﻿<Application
     x:Class="GithubX.UWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:GithubX.UWP"
     xmlns:media="using:Windows.UI.Xaml.Media"
-    RequestedTheme="Light">
+	xmlns:Windows10version1809="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract, 7)"
+	RequestedTheme="Light">
 	<Application.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
 				<XamlControlsResources  xmlns="using:Microsoft.UI.Xaml.Controls"/>
+				<ResourceDictionary Source="Theme.xaml"/>
 			</ResourceDictionary.MergedDictionaries>
 			<Color x:Key="AcrylicBrushTintColor1">#eee</Color>
 			<Color x:Key="AcrylicBrushFallbackColor1">#eee</Color>
