--- a/source/GithubX.UWP/Views/LoginPage.xaml
+++ b/source/GithubX.UWP/Views/LoginPage.xaml
@@ -6,39 +6,40 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    mc:Ignorable="d">
-    <Page.Resources>
-        <Style TargetType="TextBlock">
-            <Setter Property="FontWeight" Value="Light"/>
-            <Setter Property="HorizontalAlignment" Value="Center"/>
-        </Style>
-    </Page.Resources>
-    <Grid>
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock Text="Welcome to" FontSize="18"/>
-            <TextBlock Text="Github✘" FontSize="58"/>
-            <TextBlock Text="👽" FontSize="68"/>
-            <TextBlock Text="Github Account" Margin="8"/>
-            <TextBox Width="180" x:Name="accTextBox"/>
+	xmlns:ui="using:Microsoft.UI.Xaml.Controls"
+	mc:Ignorable="d">
+	<Page.Resources>
+		<Style TargetType="TextBlock">
+			<Setter Property="FontWeight" Value="Light"/>
+			<Setter Property="HorizontalAlignment" Value="Center"/>
+		</Style>
+	</Page.Resources>
+	<Grid>
+		<StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+			<TextBlock Text="Welcome to" FontSize="18"/>
+			<TextBlock Text="Github✘" FontSize="58"/>
+			<TextBlock Text="👽" FontSize="68"/>
+			<TextBlock Text="Github Account" Margin="8"/>
+			<TextBox Width="180" x:Name="accTextBox"/>
 
-            <Button Content="Lets Go" 
+			<Button Content="Lets Go" 
                     HorizontalAlignment="Center"
                     Margin="8"
                     Click="Login_Click"
                     Width="180"/>
-        </StackPanel>
-        <TextBlock VerticalAlignment="Bottom" Text="GithubX is a place to review and manage your starred repos readme (even offline)" Margin="8"/>
+		</StackPanel>
+		<TextBlock VerticalAlignment="Bottom" Text="GithubX is a place to review and manage your starred repos readme (even offline)" Margin="8"/>
 
-        <controls:Loading x:Name="LoadingControl" IsLoading="False">
-            <controls:Loading.Background>
-                <SolidColorBrush Color="Black" Opacity="0.7"/>
-            </controls:Loading.Background>
-            <StackPanel>
+		<controls:Loading x:Name="LoadingControl" IsLoading="False">
+			<controls:Loading.Background>
+				<SolidColorBrush Color="Black" Opacity="0.7"/>
+			</controls:Loading.Background>
+			<StackPanel>
 				<ProgressRing IsEnabled="{x:Bind LoadingControl.IsLoading,Mode=OneWay}"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Center"/>
 				<TextBlock Foreground="White" Text="Gadering Data ..."/>
-            </StackPanel>
-        </controls:Loading>
-    </Grid>
+			</StackPanel>
+		</controls:Loading>
+	</Grid>
 </Page>
