Fundations of New UWP UI

--- a/source/GithubX.UWP/App.xaml
+++ b/source/GithubX.UWP/App.xaml
@@ -4,13 +4,13 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:GithubX.UWP"
     xmlns:media="using:Windows.UI.Xaml.Media"
-	xmlns:Windows10version1809="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract, 7)"
-	RequestedTheme="Light">
+	RequestedTheme="Dark">
 	<Application.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
-				<XamlControlsResources  xmlns="using:Microsoft.UI.Xaml.Controls"/>
+				<!--<XamlControlsResources  xmlns="using:Microsoft.UI.Xaml.Controls"/>-->
 				<ResourceDictionary Source="Theme.xaml"/>
+				<!--<ResourceDictionary Source="CompactSize.xaml"/>-->
 			</ResourceDictionary.MergedDictionaries>
 			<Color x:Key="AcrylicBrushTintColor1">#eee</Color>
 			<Color x:Key="AcrylicBrushFallbackColor1">#eee</Color>
