--- a/source/GithubX.UWP/Views/ProfilePage.xaml
+++ b/source/GithubX.UWP/Views/ProfilePage.xaml
@@ -5,5 +5,61 @@
     xmlns:local="using:GithubX.UWP.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d" Background="Red">
+	xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
+	NavigationCacheMode="Enabled"
+	mc:Ignorable="d" Loaded="Page_Loaded">
+	<Hub>
+		<HubSection Header="Profile" Width="220" HorizontalContentAlignment="Stretch"
+					Background="{ThemeResource SystemRevealListLowColor}">
+			<DataTemplate>
+				<StackPanel>
+					<toolkit:ImageEx Margin="0" Background="Gray" CornerRadius="6"
+									 HorizontalAlignment="Left" Height="140" Width="140"/>
+					<RichTextBlock Margin="0 4" FontFamily="Candara">
+						<Paragraph FontSize="26">
+							<Bold>Shahriar</Bold>
+						</Paragraph>
+						<Paragraph FontSize="20">
+							yazdipour
+						</Paragraph>
+						<Paragraph Margin="0 16">
+							Software Developer at Hell
+						</Paragraph>
+						<Paragraph>
+							🏪 @GitiFarazPishro
+						</Paragraph>
+						<Paragraph>
+							🗺 Iran
+						</Paragraph>
+						<Paragraph>
+							✉
+							<Hyperlink NavigateUri="mailto:">yazdipour@outlook.com</Hyperlink>
+						</Paragraph>
+						<Paragraph>
+							🌐
+							<Hyperlink NavigateUri="0">https://yazdipour.github.io</Hyperlink>
+						</Paragraph>
+					</RichTextBlock>
+					<Button CornerRadius="2" Content="Logout" Click="Logout_Clicked"
+							HorizontalAlignment="Center" Margin="0 32 0 0"
+							RequestedTheme="Dark" Background="{ThemeResource RedPigment}"/>
+				</StackPanel>
+			</DataTemplate>
+		</HubSection>
+		<HubSection Header="Notification">
+			<DataTemplate>
+				<Grid>
+					<GridView IsItemClickEnabled="True" IsSwipeEnabled="True"
+					 CanDragItems="False" SelectionMode="Single"
+					 ItemClick="Notification_ItemClick" ItemsSource="{Binding}">
+						<GridView.ItemsPanel>
+							<ItemsPanelTemplate>
+								<ItemsWrapGrid Orientation="Vertical" />
+							</ItemsPanelTemplate>
+						</GridView.ItemsPanel>
+					</GridView>
+				</Grid>
+			</DataTemplate>
+		</HubSection>
+	</Hub>
 </Page>
